# stack-rot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/stack_rot/: __init__.py  cli.py  parsers.py  registry.py  report.py  rot-db.json  rotdb.py  scanner.py
tests/: test_parsers.py  test_rotdb.py
tests/fixtures/: sample-package.json
tests/fixtures/real/: parse-server.json
