[project]
name = "stack-rot"
version = "0.1.0"
description = "Dependency health scanner: find dead, deprecated, and abandoned packages in your project."
readme = "README.md"
license = "MIT" 
authors = [
    { name = "varalaakshay-arch", email = "varalaakshay@gmail.com" }
]
requires-python = ">=3.10"
keywords = ["dependencies", "npm", "package-health", "deprecated", "abandoned", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/varalaakshay-arch/stack-rot"
Repository = "https://github.com/varalaakshay-arch/stack-rot"
Issues = "https://github.com/varalaakshay-arch/stack-rot/issues"

[project.scripts]
stack-rot = "stack_rot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"